--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository.lowercase }}
+  REPO: ${{ github.repository }}
 
 
 jobs:
@@ -32,6 +32,11 @@ jobs:
       id-token: write
 
     steps:
+      - name: downcase REPO
+        run:  |
+            echo "IMAGE_NAME=${REPO,,}" >>${GITHUB_ENV}
+      - name: use REPO
+        run: echo "The value of REPO is: ${IMAGE_NAME}"
       - name: Checkout repository
         uses: actions/checkout@v2
 
