--- a/.github/workflows/deployToGithubPages.yml
+++ b/.github/workflows/deployToGithubPages.yml
@@ -10,20 +10,21 @@ jobs:
     # use ubuntu-latest image to run steps on
     runs-on: ubuntu-latest
     steps:
-    # uses GitHub's checkout action to checkout code form the master branch
-    - uses: actions/checkout@v2
     
+    - name: Checkout
+      uses: actions/checkout@v2.4.2
+
     # sets up .NET Core SDK 6
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 6.0
+    #- name: Setup .NET Core SDK
+    #  uses: actions/setup-dotnet@v1
+    #  with:
+    #    dotnet-version: 6.0
     # publishes Blazor project to the release-folder
-    - name: Publish .NET Core Project
-      run: dotnet publish PokerPlanning.csproj -c Release -o release --nologo
-    - name: Commit wwwroot to GitHub Pages
-      uses: github-pages-deploy-action@3.7.1
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: release/wwwroot
+    #- name: Publish .NET Core Project
+    #  run: dotnet publish PokerPlanning.csproj -c Release -o release --nologo
+    #- name: Commit wwwroot to GitHub Pages
+    #  uses: github-pages-deploy-action@3.7.1
+    #  with:
+    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #    BRANCH: gh-pages
+    #    FOLDER: release/wwwroot
