--- a/.github/workflows/deployToGithubPages.yml
+++ b/.github/workflows/deployToGithubPages.yml
@@ -13,7 +13,23 @@ jobs:
     
     - name: Checkout
       uses: actions/checkout@v2.4.2
-
+    
+    - name: Setup .Net 6  
+    - uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '6.0.x'
+        include-prerelease: false
+    
+    - name: Publish .NET Core Project
+      run: dotnet publish PokerPlanning.csproj -c Release -o release --nologo
+    
+    - name: Commit wwwroot to GitHub Pages
+      uses: github-pages-deploy-action@3.7.1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: release/wwwroot
+    
     # sets up .NET Core SDK 6
     #- name: Setup .NET Core SDK
     #  uses: actions/setup-dotnet@v1
