--- a/.github/workflows/deployToGithubPages.yml
+++ b/.github/workflows/deployToGithubPages.yml
@@ -7,7 +7,6 @@ on:
     
 jobs:
   deploy-to-github-pages:
-    # use ubuntu-latest image to run steps on
     runs-on: ubuntu-latest
     steps:
     
@@ -15,7 +14,7 @@ jobs:
       uses: actions/checkout@v2.4.2
     
     - name: Setup .Net 6  
-    - uses: actions/setup-dotnet@v2
+      uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '6.0.x'
         include-prerelease: false
