--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /.vs/PokerPlanning/FileContentIndex
 /.vs/PokerPlanning/FileContentIndex
 /.vs/PokerPlanning/DesignTimeBuild
+/.vs/PokerPlanning/DesignTimeBuild
+/.vs/PokerPlanning/v17
+/.vs
