Use redis for authentication/authorizaion. Lots of code clean up needs done. Saving work for now

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,16 @@ PokerPlanning.Services/obj/*
 PokerPlanning.Shared/bin/*
 PokerPlanning.Shared/obj/*
 docker-compose.yml
+.vs/PokerPlanning/DesignTimeBuild/.dtbcache.v2
+.vs/PokerPlanning/v17/.futdcache.v2
+.vs/PokerPlanning/v17/.suo
+.vs/PokerPlanning/v17/DocumentLayout.backup.json
+.vs/PokerPlanning/v17/DocumentLayout.json
+.vs/PokerPlanning/DesignTimeBuild/.dtbcache.v2
+.vs/PokerPlanning/v17/.futdcache.v2
+.vs/PokerPlanning/v17/.suo
+.vs/PokerPlanning/v17/DocumentLayout.backup.json
+.vs/PokerPlanning/v17/DocumentLayout.json
+.vs/ProjectEvaluation/pokerplanning.metadata.v9.bin
+.vs/ProjectEvaluation/pokerplanning.projects.v9.bin
+.vs/ProjectEvaluation/pokerplanning.strings.v9.bin
